func and route for excel generate
