# docs/swagger.json
@@ -1092,6 +1092,58 @@
                 }
             }
         },
+        "/cows/filterExcel": {
+            "post": {
+                "description": "Возращает словарь с двумя ключами \"N\", \"LST\". По ключу \"N\" - общее кол-во найденных коров и их характеристики,\nпо ключу \"LST\" - путь к файлу excel в директории ./static/excel/",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cows"
+                ],
+                "summary": "Get excel filtered list of cows",
+                "parameters": [
+                    {
+                        "description": "applied filters",
+                        "name": "filter",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/cows_filter.CowsFilter"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "additionalProperties": {
+                                    "$ref": "#/definitions/cows.FilterSerializedCow"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/cows/{id}": {
             "get": {
                 "description": "Возращает конкретную корову. Поля Father и Mother, имеют FatherId и MotherID null всегда, это неправильно, но так надо",
@@ -2406,7 +2458,7 @@
             "type": "object",
             "properties": {
                 "checkDate": {
-                    "description": "Дата конрольной дойки",
+                    "description": "Дата контрольной дойки",
                     "allOf": [
                         {
                             "$ref": "#/definitions/models.DateOnly"
@@ -2414,7 +2466,7 @@
                     ]
                 },
                 "dryMatter": {
-                    "description": "сухой материал",
+                    "description": "Сухой материал",
                     "type": "number"
                 },
                 "fat": {
@@ -2446,7 +2498,7 @@
                     "type": "integer"
                 },
                 "probeNumber": {
-                    "description": "номер пробы",
+                    "description": "Номер пробы",
                     "type": "integer"
                 },
                 "protein": {
@@ -2455,7 +2507,7 @@
                     "example": 1
                 },
                 "somaticNucCount": {
-                    "description": "количество соматических клеток",
+                    "description": "Количество соматических клеток",
                     "type": "number"
                 }
             }
@@ -2489,7 +2541,7 @@
                     "type": "integer"
                 },
                 "birthMethod": {
-                    "description": "способ зачатия: клон, эмбрион, искусственное осеменени, естественное осеменение",
+                    "description": "Способ зачатия: клон, эмбрион, искусственное осеменени, естественное осеменение",
                     "type": "string"
                 },
                 "breedId": {
@@ -2555,12 +2607,12 @@
                     "$ref": "#/definitions/models.Genetic"
                 },
                 "gradeHozId": {
-                    "description": "оценка по хозяйству",
+                    "description": "Оценка по хозяйству",
                     "type": "integer",
                     "example": 1
                 },
                 "gradeRegionId": {
-                    "description": "оценка по региону",
+                    "description": "Оценка по региону",
                     "type": "integer",
                     "example": 1
                 },
@@ -2581,7 +2633,7 @@
                     "example": 1
                 },
                 "identificationNumber": {
-                    "description": "он все-таки есть! это какой-то не российский номер коровы",
+                    "description": "Он все-таки есть! Это какой-то не российский номер коровы",
                     "type": "string"
                 },
                 "inbrindingCoeffByFamily": {
@@ -2865,7 +2917,7 @@
             "type": "object",
             "properties": {
                 "checkDate": {
-                    "description": "Дата конрольной дойки",
+                    "description": "Дата контрольной дойки",
                     "allOf": [
                         {
                             "$ref": "#/definitions/models.DateOnly"
@@ -2873,7 +2925,7 @@
                     ]
                 },
                 "dryMatter": {
-                    "description": "сухой материал",
+                    "description": "Сухой материал",
                     "type": "number"
                 },
                 "fat": {
@@ -2897,7 +2949,7 @@
                     "example": 1
                 },
                 "probeNumber": {
-                    "description": "номер пробы",
+                    "description": "Номер пробы",
                     "type": "integer"
                 },
                 "protein": {
@@ -2906,7 +2958,7 @@
                     "example": 1
                 },
                 "somaticNucCount": {
-                    "description": "количество соматических клеток",
+                    "description": "Количество соматических клеток",
                     "type": "number"
                 }
             }
@@ -2940,7 +2992,7 @@
                     "type": "integer"
                 },
                 "birthMethod": {
-                    "description": "способ зачатия: клон, эмбрион, искусственное осеменени, естественное осеменение",
+                    "description": "Способ зачатия: клон, эмбрион, искусственное осеменени, естественное осеменение",
                     "type": "string"
                 },
                 "breedId": {
@@ -2990,12 +3042,12 @@
                     "$ref": "#/definitions/models.Genetic"
                 },
                 "gradeHozId": {
-                    "description": "оценка по хозяйству",
+                    "description": "Оценка по хозяйству",
                     "type": "integer",
                     "example": 1
                 },
                 "gradeRegionId": {
-                    "description": "оценка по региону",
+                    "description": "Оценка по региону",
                     "type": "integer",
                     "example": 1
                 },
@@ -3012,7 +3064,7 @@
                     "example": 1
                 },
                 "identificationNumber": {
-                    "description": "он все-таки есть! это какой-то не российский номер коровы",
+                    "description": "Он все-таки есть! Это какой-то не российский номер коровы",
                     "type": "string"
                 },
                 "inbrindingCoeffByFamily": {
@@ -3143,7 +3195,7 @@
                     "type": "integer"
                 },
                 "path": {
-                    "description": "путь к документу относительно genmilk.ru/api/static/documents",
+                    "description": "Путь к документу относительно genmilk.ru/api/static/documents",
                     "type": "string"
                 }
             }
@@ -3152,11 +3204,11 @@
             "type": "object",
             "properties": {
                 "comment1": {
-                    "description": "Коментарий 1 (по всей видиости сюда что-то пришет врач)",
+                    "description": "Комментарий 1 (по всей видимости сюда что-то пришит врач)",
                     "type": "string"
                 },
                 "comment2": {
-                    "description": "Коментарий 2",
+                    "description": "Комментарий 2",
                     "type": "string"
                 },
                 "cowId": {
@@ -3164,7 +3216,7 @@
                     "type": "integer"
                 },
                 "dataResourse": {
-                    "description": "источник данных",
+                    "description": "Источник данных",
                     "type": "string"
                 },
                 "date": {
@@ -3176,7 +3228,7 @@
                     ]
                 },
                 "daysFromLactation": {
-                    "description": "дни от начала лактации",
+                    "description": "Дни от начала лактации",
                     "type": "integer"
                 },
                 "eventType": {
@@ -3186,18 +3238,18 @@
                     "$ref": "#/definitions/models.EventType"
                 },
                 "eventType1Id": {
-                    "description": "стандартизированная название события",
+                    "description": "Стандартизированная название события",
                     "type": "integer"
                 },
                 "eventType2": {
                     "$ref": "#/definitions/models.EventType"
                 },
                 "eventType2Id": {
-                    "description": "стандартизированное разновидность события",
+                    "description": "Стандартизированное разновидность события",
                     "type": "integer"
                 },
                 "eventTypeId": {
-                    "description": "стандартизированная группа события",
+                    "description": "Стандартизированная группа события",
                     "type": "integer"
                 },
                 "id": {
@@ -3209,7 +3261,7 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "description": "код группы или разновидности или названия события",
+                    "description": "Код группы или разновидности или названия события",
                     "type": "integer"
                 },
                 "id": {
@@ -3305,6 +3357,7 @@
                     "type": "number"
                 },
                 "milkStrength": {
+                    "description": "100 бальные",
                     "type": "number"
                 },
                 "pelvicWidth": {
@@ -3353,7 +3406,7 @@
                     "type": "string"
                 },
                 "cowsCount": {
-                    "description": "количество коров",
+                    "description": "Количество коров",
                     "type": "integer"
                 },
                 "description": {
@@ -3365,7 +3418,7 @@
                     "type": "integer"
                 },
                 "email": {
-                    "description": "эл. почта",
+                    "description": "Эл. почта",
                     "type": "string"
                 },
                 "hozNumber": {
@@ -3384,7 +3437,7 @@
                     "type": "string"
                 },
                 "nameShort": {
-                    "description": "Краткое название хозйства",
+                    "description": "Краткое название хозяйства",
                     "type": "string"
                 },
                 "parrentId": {
@@ -3424,7 +3477,7 @@
                     }
                 },
                 "gtcFilePath": {
-                    "description": "путь к gtc файлу относительно genmilk.ru/api/static/gtc",
+                    "description": "Путь к gtc файлу относительно genmilk.ru/api/static/gtc",
                     "type": "string"
                 },
                 "id": {
@@ -3440,7 +3493,7 @@
                     "type": "string"
                 },
                 "resultDate": {
-                    "description": "Дата получения  результата",
+                    "description": "Дата получения результата",
                     "allOf": [
                         {
                             "$ref": "#/definitions/models.DateOnly"
@@ -3510,6 +3563,9 @@
         "models.Grade": {
             "type": "object",
             "properties": {
+                "cowID": {
+                    "type": "integer"
+                },
                 "ebvFat": {
                     "description": "Оценка жира по EBV",
                     "type": "number"
@@ -3531,7 +3587,7 @@
                     "type": "number"
                 },
                 "generalValue": {
-                    "description": "CowID           uint",
+                    "description": "Общая оценка по EBV",
                     "type": "number"
                 },
                 "id": {
@@ -3639,7 +3695,7 @@
                     "type": "integer"
                 },
                 "days": {
-                    "description": "количество дней, когда корова дает молоко",
+                    "description": "Количество дней, когда корова дает молоко",
                     "type": "integer"
                 },
                 "fat305": {
@@ -3727,18 +3783,18 @@
                     "type": "string"
                 },
                 "description": {
-                    "description": "описание партнера",
+                    "description": "Описание партнера",
                     "type": "string"
                 },
                 "email": {
-                    "description": "эл. почта",
+                    "description": "Эл. почта",
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "logoPath": {
-                    "description": "путь к логотипу партнера относительно genmlik.ru/api/static/partners",
+                    "description": "Путь к логотипу партнера относительно genmlik.ru/api/static/partners",
                     "type": "string"
                 },
                 "name": {
@@ -3759,7 +3815,7 @@
                     "default": 1
                 },
                 "name": {
-                    "description": "название региона",
+                    "description": "Название региона",
                     "type": "string",
                     "example": "Усть-Каменский"
                 },
@@ -3770,7 +3826,7 @@
                     }
                 },
                 "regNum": {
-                    "description": "номер региона (Архангельская область = 29)",
+                    "description": "Номер региона (Архангельская область = 29)",
                     "type": "integer"
                 }
             }
@@ -3782,7 +3838,7 @@
                     "type": "integer"
                 },
                 "name": {
-                    "description": "название роли",
+                    "description": "Название роли",
                     "type": "string"
                 }
             }
@@ -3818,7 +3874,7 @@
                     "type": "string"
                 },
                 "hozNumber": {
-                    "description": "номер хоз-ва к которому привязвыается пользователь: либо существует, либо newHoz",
+                    "description": "Номер хоз-ва к которому привязвыается пользователь: либо существует, либо newHoz",
                     "type": "string"
                 },
                 "id": {
